# phys_learning

./: .gitignore  README.md  manage.sh  pyproject.toml  setup.sh
events/: data.txt  lhe2txt.py  make.sh  my_jj.txt  my_z.txt  prepare.sh
src/phys_learning/: __init__.py  binary_dnn.py  classifier.py  classifier_ada.py  classifier_dnn.py  classifier_dt.py  classifier_grad.py  classifier_rf.py  cli.py  core.py  formula.py  model.py  phys.py  phys_binary.py  phys_model.py  plot.py  two_particles.py
src/var_learning/: __init__.py  __main__.py  classifier.py  classifier_ada.py  classifier_dnn.py  classifier_dt.py  classifier_grad.py  classifier_rf.py  cli.py  core.py  formula.py  plot.py
tests/: test_phys_learning.py  test_phys_model.py
