[tool.poetry]
name = "phys_learning"
version = "0.1.0"
description = ""
authors = ["Michiru Kaneda <Michiru.Kaneda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
fire = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
phys_learning = "phys_learning:main"
