[tool.poetry]
name = "phys_learning"
version = "0.1.0"
description = ""
repository = "https://github.com/mickaneda/phys_learning"
homepage = "https://github.com/mickaneda/phys_learning"
authors = ["Michiru Kaneda <Michiru.Kaneda@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ['ml', 'machine learning', 'physics']

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
fire = "^0.2.1"
bandit = "^1.6.2"
sklearn = "^0.0"
matplotlib = "^3.2.0"
keras = "^2.3.1"
tensorflow = "^2.1.0"
tensorflow-estimator = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
phys_learning = "phys_learning:main"
var_learning = "var_learning:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

